
Version 1.4.20 - SVN
--------------------
  - Removed the shut down DSBL blocklists (#2796734).
  - Fixed broken RFC1918 reference in contrib/.htaccess and doc/.htaccess (#2798839).
  - Updated INSTALL doc to remove possible bad system admin typos (#2827153).
  - PHP 5.3 deprecates ereg functions (#2820952).
  - Filters plugin uses badly formatted literals request (#2805201).

Version 1.4.19 - 21 May 2009
----------------------------
  - Removed use of session_unregister() for compatibility with PHP 5.3.0
    and PHP 6.
  - Fixed the Filters plugin to allow commas in filter criteria text and
    not to error out when spam-scanning only unread mail.
  - Resend cookie to browser after session ID regeneration so it gets the
    right cookie parameters.
  - In SMTP, when we EHLO with an IP, wrap it in brackets (#2793154).
  - The shell escaping fix in map_yp_alias (CVE-2009-1579) was incomplete.
    Thanks Michal Hlavinka for noticing this. [CVE-2009-1381]

Version 1.4.18 - 11 May 2009
----------------------------
  - Fixed port detection in automatic base URL detection scheme
    (get_location()). (#2388423)
  - Added informational type option widget.
  - Added password type option widget.
  - Fixed filters plugin to allow spam filters to scan multiple
    messages, rather than the first message returned. (#1634735)
  - Removed code from spam filters plugin to stop if falling back
    to searching all messages when there was no new messages.
  - Altered filters plugin to issue single move/delete statement
    for multiple messages.
  - Updated some core code, and several plugins, to not use code
    marked as obsolete.
  - Corrected sqimap_msgs_list_copy to actually copy messages,
    rather than move.
  - Created new sqimap_msgs_list_move to move messages.
  - Migrated some fetch handling code from dev branch in plans to
    update some core functionality to allow reusability of code.
  - Make address book file permissions 0600 - same as preference files.